--- a/css/monkey.css
+++ b/css/monkey.css
@@ -10,3 +10,9 @@ html {
 
 /* Write your solution here */
 
+@media only screen and (max-width: 1170px) {
+  #monkey {bottom: 800px;}
+}
+@media only screen and (min-width: 406px) {
+  #monkey {bottom: 800px;}
+}
