--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -20,6 +20,10 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (max-width: 1090px) {
-  #dolphin {bottom: 800px;}
+@media only screen and (min-width: 642px) and (max-width: 1090px) {
+  #dolphin {
+    transform: rotate(-0.25 turn);
+    right: 0;
+    top: 100px;
+  }
 }
