--- a/css/monkey.css
+++ b/css/monkey.css
@@ -11,5 +11,8 @@ html {
 /* Write your solution here */
 
 @media only screen and (min-width: 406px) and (max-width: 1170px) {
-  #monkey {bottom: 800px;}
+  #monkey {
+    right: 0;
+    top: 0;
+  }
 }
