--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -10,6 +10,6 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (min-width: 1196px) {
-  #ostrich {bottom: 100px;}
+@media only screen and (max-width: 1320px) {
+  #ostrich {top: -50px;}
 }
